# fountain

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
docs/: Makefile.am  Makefile.in  fountain.html  fountain.l  fountain.pod  fountain.pod.in  fountain.ps
snippets/: am_vars.mk  create_am_macros.mk  inst_vars.mk  pod_html.mk  pod_man_init.mk  pod_manl.mk  pod_ps_init.mk  pod_psl.mk  prog_pod_base.mk  prog_pod_subst.mk  prog_usage_c.mk  prog_usage_c_base.mk  substitute_config_variables.mk
src/: Makefile.am  Makefile.in  goption.c  main.c  main.h  pipecommand.c  process.c  usage.c  usage.h
