include $(top_srcdir)/snippets/create_am_macros.mk

SUBDIRS			=	\
			docs	\
			src

# Any files make built
CLEANFILES		+=

# Any files configure built
DISTCLEANFILES		+=

# Any files maintainer built(with autoconf, automake, etc)
MAINTAINERCLEANFILES	+= \
			Makefile.in	\
			aclocal.m4	\
			compile		\
			config.guess	\
			config.h.in	\
			config.sub	\
			configure	\
			depcomp		\
			install-sh	\
			ltmain.sh	\
			missing		\
			mkinstalldirs
